tests/NormalTests/paczka1/fuzzy1/64513459.err
Error in line 2: 3QPwm A314 30,5
Error in line 7: yz6ZCAzyk A831 82,8
Error in line 12: qs6 S77 33,9
Error in line 35: qs6 A314 25,7
